Fix T45825: Macro redo disable options incorrectly

A non repeatable operator would disable editing options for all operators after it.